@@ -100,7 +100,7 @@ public:
 	void Open(AudioFormat &audio_format);
 	void Close();
 
-	std::chrono::steady_clock::duration Delay();
+	std::chrono::steady_clock::duration Delay() noexcept;
 	size_t Play(const void *chunk, size_t size);
 	void Cancel();
 	bool Pause();
@@ -740,7 +740,7 @@ PulseOutput::StreamPause(bool pause)
 }
 
 inline std::chrono::steady_clock::duration
-PulseOutput::Delay()
+PulseOutput::Delay() noexcept
 {
 	Pulse::LockGuard lock(mainloop);
 
