@@ -1,4 +1,6 @@
 ver 0.20.8 (not yet released)
+* output
+  - osx: fix build failure due to missing "noexcept"
 
 ver 0.20.7 (2017/05/15)
 * database
